fixed svg overlap, and flicker in  safari

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,8 @@
 body {
+  -webkit-transform-style: preserve-3d;
+  -webkit-backface-visibility: hidden;
   height: 100%;
   overflow: hidden;
-  /*background-color: rgb(205,195,205);*/
   background-color: black;
   background-repeat: no-repeat;
   margin: 0;
@@ -10,10 +11,13 @@ body {
 
 svg {
   position:absolute;
+  -webkit-transform-style: preserve-3d;
+  -webkit-transform: translate3d(0, 0, -1px);
   width: 10000px;
   height:  10000px;
   left: -5000px;
   z-index: -1;
+
 }
 
 header > span {
@@ -73,6 +77,7 @@ header img{
   color: #3D3D3D;
   font-style: italic;
   -webkit-transform-style: preserve-3d;
+  -webkit-backface-visibility: hidden;
   background-color: white;
   position: absolute;
   width: 110px;
@@ -87,13 +92,6 @@ header img{
   z-index: 2;
 }
 
-.user-view .add-user-icon {
-  width: 10px;
-  height: 10px;
-  right: 2%;
-  bottom: 0.5%;
-  position: fixed;
-}
 
 .big-user-view .edit-user-icon {
   width: 20px;
@@ -122,42 +120,17 @@ header img{
   display: inline-block;
 }
 
-.log-in-view {
-  top: 0;
-  position: absolute;
-  right: 0;
-  padding: 5px 5px 5px 5px;
-}
-
-.log-in-view label{
-  padding-left: 15px;
-  padding-right: 5px;
-  color: white;
-  font-family: inherit;
-  font-style: italic;
-}
-
-.log-in-view input{
-  color: black;
-  font-family: tahoma;
-}
-
-.flat-view{
-  -webkit-transform-style: preserve-3d;
-  -webkit-perspective:800;
-  position:relative;
-
-}
-
 .hierarchy-view{
   top:100px;
   -webkit-transform-style: preserve-3d;
+  -webkit-backface-visibility: hidden;
   -webkit-perspective:800;
   position:relative;
 }
 
 .dolly-view{
   -webkit-transform-style: preserve-3d;
+  -webkit-backface-visibility: hidden;
   -webkit-perspective:800;
   position:relative;
   z-index: 0;
@@ -165,6 +138,7 @@ header img{
 
 .camera-view{
   -webkit-transform-style: preserve-3d;
+  -webkit-backface-visibility: hidden;
   -webkit-perspective:800;
   position:relative;
   z-index: 0;
@@ -217,6 +191,8 @@ data {
 }
 
 .big-user-view-container {
+  -webkit-transform-style: preserve-3d;
+  -webkit-backface-visibility: hidden;
   font-family: arial;
   position:absolute;
   overflow: hidden;
